# voxgate-voice-eval-harness

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CONTEXT.md  ERRORS.md  PROGRESS.md  architecture.md  assessment.md  design_writeup.md
eval_system/: run.py  validate_fixture.py
eval_system/calibration/: drift.py  judge_agreement.py
eval_system/context/: fixture_loader.py  fixture_schema.py  metric_context.py
eval_system/gating/: gate.py
eval_system/judges/: anthropic_client.py  client.py  factory.py  openai_client.py
eval_system/metrics/: base.py  registry.py  sampling.py
eval_system/metrics/acoustic/: barge_in.py  double_talk.py  emotion_appropriateness_mm.py  emotional_appropriateness.py  entity_intelligibility.py  latency_thresholds.py  naturalness_mos.py  pitch_prosody.py  ser_emotion.py  turn_taking_latency.py  vad.py
eval_system/metrics/semantic/: faithfulness.py  instruction_adherence.py  task_success.py  tool_call_ordering.py
eval_system/monitoring/: production_proxies.py
eval_system/report/: combine.py  html_report.py  markdown_report.py  pdf_report.py
eval_system/validators/: preflight.py
fixtures/TEMPLATE/: README.md  expected.json  tool_log.jsonl
fixtures/barge_in_basic/: events.jsonl  expected.json  scenario_db.json  transcript.jsonl
fixtures/happy_path_book/: scenario_db.json  transcript.jsonl
fixtures/reschedule_trap/: events.jsonl  expected.json  scenario_db.json  tool_log.jsonl  transcript.jsonl
scripts/: fixture_tts.py  generate_fixtures.py
tests/: test_barge_in.py  test_barge_in_known_answer.py  test_contracts.py  test_dotenv_support.py  test_double_talk.py  test_drift.py  test_emotion_appropriateness_mm.py  test_emotion_disagreement.py  test_emotional_appropriateness.py  test_entity_intelligibility.py  test_faithfulness.py  test_fixtures.py  test_gate.py  test_gate_advisory_breakdown.py  test_html_report.py  test_instruction_adherence_judge.py  test_instruction_adherence_rule.py  test_judge_agreement.py  test_judge_factory.py  test_known_answer_gate_invariants.py  test_known_answer_reschedule_trap.py  test_latency_thresholds.py  test_markdown_report.py  test_metric_context.py  test_naturalness_mos.py  test_pdf_report.py  test_pitch_prosody.py  test_production_proxies.py  test_registry.py  test_report_combine.py  test_run.py  test_sampling.py  test_ser_emotion.py  test_task_success.py  test_tool_call_ordering.py  test_turn_taking_latency.py  test_validate_fixture.py  test_validators.py
