[project]
name = "voxgate-voice-eval"
version = "0.1.0"
description = "VoxGate — post-hoc evaluation system for an inbound clinic-scheduling voice agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "soundfile>=0.12",
    "python-dotenv>=1.0",
    # PDF companion for the Markdown report (report/pdf_report.py). Both are
    # pure-Python (no native compiler/GTK needed) -- xhtml2pdf renders via
    # reportlab, unlike weasyprint which needs system GTK/Pango on Windows.
    "markdown>=3.6",
    "xhtml2pdf>=0.2.15",
]

# Heavy / optional deps are gated behind extras so the CORE CONTRACT and SEMANTIC
# layers stay runnable even where an acoustic wheel is unavailable on a given
# interpreter. See CLAUDE.md invariant: "keep the core contracts dependency-free".
[project.optional-dependencies]
acoustic = [
    "librosa>=0.10",
    "praat-parselmouth>=0.4",
    "faster-whisper>=1.0",
    # webrtcvad needs a C compiler to build from source (no Windows wheel for
    # this Python) -- silero-vad is CLAUDE.md's other listed option and is
    # pure Python + ONNX, no compiler required.
    "silero-vad>=5.1",
    "jiwer>=3.0",
    # librosa's own numba floor is too old to build on Python 3.13+ (llvmlite
    # wheel for that numba version doesn't support it) -- force a modern one.
    "numba>=0.61",
    # SER (ser_emotion.py): superb/wav2vec2-base-superb-er via transformers'
    # audio-classification pipeline. torch already present (silero-vad pulls it in).
    "transformers>=4.40",
    # naturalness_mos.py: non-intrusive MOS via DNSMOS (P.808). The package's
    # advertised UTMOS entry point (utmos22_strong) doesn't actually exist in
    # the published release -- DNSMOS is what's really shipped, and was
    # already an approved fallback. ONNX models bundled, no extra download.
    "speechmos>=0.0.1",
]
judge = [
    "anthropic>=0.40",
    "openai>=1.40",
    # Multimodal emotion-appropriateness judge (emotion_appropriateness_mm.py) --
    # the only judge here that hears real audio bytes, not a text description.
    "google-genai>=0.3",
]
stats = [
    "scipy>=1.11",
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
